--- a/ex32/fundo001.html
+++ b/ex32/fundo001.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+    <div>
+        
+    </div>
 </body>
 </html>
