--- a/ex33/index.html
+++ b/ex33/index.html
@@ -12,13 +12,47 @@
         <h1>Cordel Mordeno</h1>
         <p>Pora <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
-    <section>
-        <p></p>
+    <section class="normal">
+        <p><br>Estou ficando cansado</br>
+        <br>   Da tal tecnologia</br>
+        <br>   Só se fala por e-mail</br>
+        <br>   Mensagem curta e fria</br>
+        <br>   Twitter e Facebook</br>
+        <br>   Antes que eu caduque</br>
+        <br>   Vou dizer tudo em poesia.</br>
+        </p>
     </section>
-    <section>
-        <p></p>
+    <section class="image" id="img01">
+        
+        <p>
+            <br>Não é mais como era antes</br>
+            <br>É tudo abreviado</br>
+            <br>"Você" só tem duas letras</br>
+            <br>O "O" e o "E" foi riscado</br>
+            <br>Para declarar o amor</br>
+            <br>Basta botar uma flor</br>
+            <br>E um coração desenhado.</br>
+        </p>
     </section>
-    <section>
+    <section class="normal">
+        <p>
+            <br>Arroba agora não pesa</br>
+            <br>É parte de um endereço</br>
+            <br>Ponto final nem se usa</br>
+            <br>Ou vai até no começo</br>
+            <br>Agora é .com</br>
+            <br>Se o saite é muito bom</br>
+            <br>Ele vale um alto preço.</br>
+
+        </p>
+    </section>
+    <section  class="image" id="img01">
+        <p>
+
+        </p>
+
+    </section>
+    <section  class="image" id="img01">
         <p></p>
     </section>
     <footer><p></p></footer>
