--- a/ex33/index.html
+++ b/ex33/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Cordel Mordeno</h1>
-        <p>Pora <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
     <section class="normal">
         <p><br>Estou ficando cansado</br>
@@ -45,17 +45,50 @@
             <br>Ele vale um alto preço.</br>
 
         </p>
+        <p>
+            <br>Pra piorar a liguagem</br>
+            <br>O emoticom é um risco</br>
+            <br>Tem símbolo para tudo</br>
+            <br>Ponto e vírgula e um asterisco</br>
+            <br>Um beijo significa</br>
+            <br>Pra entender como fica</br>
+            <br>Decifre esse rabisco.</br>
+        </p>
     </section>
     <section  class="image" id="img01">
         <p>
+            <br>Tenho saudade das cartas</br>
+            <br>Escritas com a própria mão</br>
+            <br>Mandava no mês de Junho</br>
+            <br>Só chegava no Verão</br>
+            <br>Mas matava a saudade</br>
+            <br>Era texto de verdade</br>
+            <br>Nas linhas do coração.</br>
 
         </p>
 
     </section>
     <section  class="image" id="img01">
-        <p></p>
+        <p>
+            <br>Agora, escrevo e envio</br>
+            <br>Chegando na mesma hora</br>
+            <br>Mas quando vou prosear</br>
+            <br>A pessoa foi embora</br>
+            <br>Abriu outro aplicativo</br>
+            <br>O mundo ficou cativo</br>
+            <br>Da tecnologia do agora.</br>
+        </p>
+        <p>
+            <br>Felizmente, pra orar</br>
+            <br>Não precisa de internet</br>
+            <br>Deus escuta todo mundo</br>
+            <br>Se quiser, faça esse teste</br>
+            <br>Dois pontos são dois joelhos</br>
+            <br>Seus lábios são aparelhos</br>
+            <br>Deixe que Deus interprete.</br>
+        </p>
     </section>
-    <footer><p></p></footer>
+    <footer><p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavoguanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em video</a></p></footer>
     
 </body>
 </html>
