--- a/ex33/index.html
+++ b/ex33/index.html
@@ -89,7 +89,7 @@
             Deixe que Deus interprete.<br>
         </p>
     </section>
-    <footer><p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavoguanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em video</a></p></footer>
+    <footer><p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p></footer>
     
 </body>
 </html>
