--- a/ex34/tabela2.html
+++ b/ex34/tabela2.html
@@ -22,6 +22,12 @@
         margin: auto;
         padding: 1px;
     }
+    caption{
+        font-size: 1.5em;
+        font-weight: bold;
+        padding: 10px;
+        background-color: lightgray;
+    }
     td,th{
         border: 1px solid black;
         padding: 10px;
@@ -49,10 +55,11 @@
         
     -->
     <table>
+        <caption>Populaçãos das unidades federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width:50px;">População</th>
             </tr>
 
         </thead>
@@ -168,7 +175,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num">210.147.125</td>
             </tr>
            
