--- a/ex34/tabela8.html
+++ b/ex34/tabela8.html
@@ -12,8 +12,8 @@
         table{
             border-collapse: collapse;
         }
-        tr,td{
-            border-radius: 1px solid black;
+        td,th{
+            border: 1px solid black;
         }
     </style>
 </head>
@@ -21,10 +21,10 @@
     <table>
         <caption>Cadastro</caption>
         <tr>
-            <th>Nome</th>
-            <th>Sexo</th>
-            <th>Idade</th>
-            <th>Profissão</th>
+            <th scope="col">Nome</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Idade</th>
+            <th scope="col">Profissão</th>
         </tr>
         <tr>
             <td>Ana Maria</td>
