--- a/ex35/iframe001.html
+++ b/ex35/iframe001.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esttudos em iframe</title>
+    <title>Estudos em iframe</title>
+    <style>
+        iframe{
+            width:200px;
+            height:200px;
+            border:1px dashed black;
+        }
+    </style>
 </head>
 <body>
     
 </body>
 <h1>testando o uso de iframe</h1>
+<!--tamanho padrão 300x150-->
 <p>Acessando o  site  do 
-    <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> para aprender a programar</p>
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> também é muito legal</p>
+    <iframe src="https://www.cursoemvideo.com" frameborder="0" scolling="no"><a href="https://www.cursoemvideo.com" target="_blank">cursoemvideo</a></iframe> para aprender a programar</p>
+    <p>O repositório do guanabara <iframe src="https://gustavoguanabara.github.io" frameborder="0"> <a href="https://gustavoguanabara.github.io" target="_blank">gustavoguanabara</a></iframe> é bem  legal</p>
 </html>
