--- a/ex35/iframe002.html
+++ b/ex35/iframe002.html
@@ -21,7 +21,7 @@
 <body>
     <h1>Teste de iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt necessitatibus eos, excepturi saepe eveniet itaque? Rerum quod provident in, illo fuga architecto soluta veritatis hic autem amet temporibus quam dicta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laboriosam optio velit doloribus assumenda voluptatibus molestiae dignissimos adipisci officiis cum. Culpa, perferendis sit. Quam at modi magnam reprehenderit, totam eveniet.</p>
-    <iframe src="pagina001.html" frameborder="0" height="500" width="750"></iframe>
+    <iframe src="paginas-extras/pagina001.html" frameborder="0" height="500" width="750"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt necessitatibus eos, excepturi saepe eveniet itaque? Rerum quod provident in, illo fuga architecto soluta veritatis hic autem amet temporibus quam dicta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laboriosam optio velit doloribus assumenda voluptatibus molestiae dignissimos adipisci officiis cum. Culpa, perferendis sit. Quam at modi magnam reprehenderit, totam eveniet.</p>
     
