--- a/ex35/iframe003.html
+++ b/ex35/iframe003.html
@@ -25,8 +25,9 @@
         <li><a href="paginas-extras/pagina003.html" target="frame">terceira página</a></li>
     </ul>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In totam autem quis ratione illum, deserunt placeat suscipit unde aliquam excepturi explicabo esse similique laborum quibusdam recusandae ipsum inventore iusto veritatis!</p>
-    <iframe id="tela" name="frame" src="" frameborder="0">
+    <iframe id="tela" name="frame" srcdoc="<h1>faça uma escolha acima </h1><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt repudiandae obcaecati aliquid delectus. Voluptate, illum! Sed, voluptatibus. Sed repudiandae cumque, laborum iure cupiditate consequatur rerum deleniti quis consequuntur, ducimus laboriosam!</p>  <img src='imagens/dark.jpg' alt=''>" frameborder="0">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
+       
     </iframe>
     
 </body>
