--- a/ex36/site1.html
+++ b/ex36/site1.html
@@ -10,9 +10,12 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="imagem/tela-home.jpg" frameborder="0">
+            <iframe src="" frameborder="0">
                 <a href="#"></a>
             </iframe>
+        </section>
+        <section>
+            <a href="#"><img src="imagem/logo-home.jpg" alt="Home"></a>
         </section>
     </main>
     
