--- a/ex36/site1.html
+++ b/ex36/site1.html
@@ -10,12 +10,16 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="" frameborder="0">
-                <a href="#"></a>
+            <iframe src="" frameborder="0"  name="tela" id="tela">
             </iframe>
         </section>
-        <section>
-            <a href="#"><img src="imagem/logo-home.jpg" alt="Home"></a>
+        <section id="redes">
+            <a href="paginas/home.html" target="tela"><img src="imagem/logo-home.jpg" alt="Home" ></a><br>
+            <a href="paginas/youtube.html" target="tela"><img src="imagem/logo-youtube.jpg" alt="youtube" ></a><br>
+            <a href="/ex36/paginas/github.html" target="tela"><img src="imagem/logo-github.jpg" alt="github" ></a><br>
+            <a href="/ex36/paginas/instagram.html" target="tela"><img src="imagem/logo-instagram.jpg" alt="istagram"></a><br>
+            <a href="/ex36/paginas/twitter.html" target="tela"><img src="imagem/logo-twitter.jpg" alt="twitter"></a><br>
+            <a href="paginas/facebook.html" target="tela"><img src="imagem/logo-facebook.jpg" alt="facebook"></a>
         </section>
     </main>
     
