--- a/ex36/paginas/facebook.html
+++ b/ex36/paginas/facebook.html
@@ -31,7 +31,7 @@
         }
         a{
             display: block;
-            background-color: darkred;
+            background-color: #44619D;
             padding: 20px;
             text-align: center;
             color: white;
@@ -41,7 +41,7 @@
             font-size: 16px;
         }
         a:hover{
-            background-color: rgb(218, 22, 22);
+            background-color: #1a2bca;
         }
 
             
