--- a/ex36/paginas/github.html
+++ b/ex36/paginas/github.html
@@ -31,7 +31,7 @@
         }  
         a{
             display: block;
-            background-color: darkred;
+            background-color: #49a560;
             padding: 20px;
             text-align: center;
             color: white;
@@ -41,7 +41,8 @@
             font-size: 16px;
         }
         a:hover{
-            background-color: rgb(218, 22, 22);
+            background-color: #00cf68;
+            
         }
 
             
