--- a/ex36/paginas/instagram.html
+++ b/ex36/paginas/instagram.html
@@ -31,7 +31,7 @@
         }
         a{
             display: block;
-            background-color: darkred;
+            background:linear-gradient(to left, #5645C5 ,#902DBB ,#DF2261,#F14F45,#FFBE5A);
             padding: 20px;
             text-align: center;
             color: white;
@@ -41,7 +41,7 @@
             font-size: 16px;
         }
         a:hover{
-            background-color: rgb(218, 22, 22);
+            background: linear-gradient(to left, #2f87fa ,#b02dfc ,#ff0000,hsl(22, 100%, 50%),#fffc44);
         }
 
 
