--- a/ex36/paginas/instagram.html
+++ b/ex36/paginas/instagram.html
@@ -39,6 +39,7 @@
             font-family: Arial, Helvetica, sans-serif;
             font-weight: bolder;
             font-size: 16px;
+            transition: 0.5s;
         }
         a:hover{
             background: linear-gradient(to left, #2f87fa ,#b02dfc ,#ff0000,hsl(22, 100%, 50%),#fffc44);
