--- a/ex36/paginas/facebook.html
+++ b/ex36/paginas/facebook.html
@@ -39,6 +39,7 @@
             font-family: Arial, Helvetica, sans-serif;
             font-weight: bolder;
             font-size: 16px;
+            transition: 0.5s;
         }
         a:hover{
             background-color: #1a2bca;
