--- a/ex36/paginas/youtube.html
+++ b/ex36/paginas/youtube.html
@@ -39,6 +39,7 @@
             font-family: Arial, Helvetica, sans-serif;
             font-weight: bolder;
             font-size: 16px;
+            transition: 0.5s;
         }
         a:hover{
             background-color: rgb(218, 22, 22);
