--- a/ex36/paginas/home.html
+++ b/ex36/paginas/home.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <style>
-        *{
-            margin:0px;
-            padding:0px;
-        }
-        body{
-            width: 100vw;
-            height: 100vh;
-            background: black url(/ex36/imagem/tela-home.jpg) no-repeat top center;
-            background-size: cover;
-        }
+      *{
+        margin:0px;
+        padding:0px;
+      }
+      body{
+        width: 100vw;
+        height:100vh;
+        background: black url(../imagem/tela-home.jpg) no-repeat top center;
+        background-size: cover;
+      }
       
             
     </style>
