--- a/ex36/site1.html
+++ b/ex36/site1.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Redes Sociais</title>
+    <title>Projeto redes sociais</title>
     <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
     <main>
         <section id="telefone">
-            <iframe src="" frameborder="0"  name="tela" id="tela">
-            </iframe>
+            <iframe src="../ex36/paginas/home.html" frameborder="0" name="tela" id="tela">Meu navegador não é compatível</iframe>
+
         </section>
-        <section id="redes">
-            <a href="paginas/home.html" target="tela"><img src="imagem/logo-home.jpg" alt="Home" ></a><br>
-            <a href="paginas/youtube.html" target="tela"><img src="imagem/logo-youtube.jpg" alt="youtube" ></a><br>
-            <a href="/ex36/paginas/github.html" target="tela"><img src="imagem/logo-github.jpg" alt="github" ></a><br>
-            <a href="/ex36/paginas/instagram.html" target="tela"><img src="imagem/logo-instagram.jpg" alt="istagram"></a><br>
-            <a href="/ex36/paginas/twitter.html" target="tela"><img src="imagem/logo-twitter.jpg" alt="twitter"></a><br>
-            <a href="paginas/facebook.html" target="tela"><img src="imagem/logo-facebook.jpg" alt="facebook"></a>
+        <section id="redes-sociais">
+            <a href="../ex36/paginas/home.html" target="tela"><img src="../ex36/imagem/logo-home.jpg" alt="Home"></a><br>
+            <a href="../ex36/paginas/youtube.html" target="tela"><img src="../ex36/imagem/logo-youtube.jpg" alt="youtube"></a><br>
+            <a href="../ex36/paginas/github.html" target="tela"><img src="../ex36/imagem/logo-github.jpg" alt="github"></a><br>
+            <a href="../ex36/paginas/instagram.html" target="tela"><img src="../ex36/imagem/logo-instagram.jpg" alt="instagram"></a><br>
+            <a href="../ex36/paginas/twitter.html" target="tela"><img src="../ex36/imagem/logo-twitter.jpg" alt="twitter"></a><br>
+            <a href="../ex36/paginas/facebook.html" target="tela"><img src="../ex36/imagem/logo-facebook.jpg" alt="facebook"></a><br>
+
         </section>
+
     </main>
     
 </body>
