--- a/ex37/formulários.html
+++ b/ex37/formulários.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>MEU PRIMEIRO FORMULÁRIO</h1>
-    
+    <form action="">
+        <p>Nome: <input type="text" name="nome" id="nome"></p>
+        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p>
+        <p><input type="submit" value="Enviar"></p>
+    </form>
 </body>
 </html>
