--- a/ex38/index.html
+++ b/ex38/index.html
@@ -19,14 +19,15 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Projetos</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
     <main></main>
+    <script src="moble.js"></script>
     
 </body>
 </html>
