--- a/ex39/index.html
+++ b/ex39/index.html
@@ -13,6 +13,7 @@
     <a href="" id="logo">Logo</a>
     <nav id="nav">
         <button id="btn-mobile">Menu</button>
+        <span id="hamburguer"></span>
         <ul id="menu">
             <li><a href="">Menu</a></li>
             <li><a href="">Sobre</a></li>
