--- a/ex39/index.html
+++ b/ex39/index.html
@@ -12,8 +12,11 @@
 
     <a href="" id="logo">Logo</a>
     <nav id="nav">
-        <button id="btn-mobile">Menu</button>
-        <span id="hamburguer"></span>
+        <button id="btn-mobile" aria-expanded="false">Menu
+
+          <span id="hamburguer"></span>
+        </button>
+       
         <ul id="menu">
             <li><a href="">Menu</a></li>
             <li><a href="">Sobre</a></li>
