--- a/ex39/index.html
+++ b/ex39/index.html
@@ -12,10 +12,10 @@
 
     <a href="" id="logo">Logo</a>
     <nav id="nav">
-        <button id="btn-mobile" aria-expanded="false">Menu
+        <div id="btn-mobile" aria-expanded="false">
 
           <span id="hamburguer"></span>
-        </button>
+        </div>
        
         <ul id="menu">
             <li><a href="">Menu</a></li>
