--- a/ex37/formulários.html
+++ b/ex37/formulários.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>MEU PRIMEIRO FORMULÁRIO</h1>
-    <form action="cadastro-php" method="post" autocomplete="off">
+    <form action="cadastro.php" method="post" autocomplete="off">
         <p id="su"><label for="inome">Nome:</label><input type="text" name="nome" id="inome"></p>
         <p><label for="isobrenome">Sobrenome :</label><input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar" id="enviar"></p>
