--- a/ex42/index.html
+++ b/ex42/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="style.css">
-    <script src="calcula.js"></script>
+    <script src="calcula.js" defer></script>
 </head>
 <body>
     <div class="calculator-grid">
         <div class="output">
-            <div  date-previous-operand class="previous-operand"> </div>
-            <div date-current-operand class="current-operand"></div>
+            <div  data-previous-operand class="previous-operand"> </div>
+            <div data-current-operand class="current-operand"></div>
         </div>
-        <button class="span-two">AC</button>
+        <button data-all-clear class="span-two">AC</button>
         <button data-delete>DEL</button>
-        <button data-operation>/</button>
+        <button data-operation>÷</button>
         <button data-number>1</button>
         <button data-number>2</button>
         <button data-number>3</button>
-        <button data-operation>x</button>
+        <button data-operation>*</button>
         <button data-number>4</button>
         <button data-number>5</button>
         <button data-number>6</button>
@@ -31,7 +31,7 @@
         <button data-operation>-</button>
         <button data-number>.</button>
         <button data-number>0</button>
-        <button class="span-two">=</button>
+        <button data-equals class="span-two">=</button>
        
     </div>
     
