--- a/ex43/index.html
+++ b/ex43/index.html
@@ -28,6 +28,12 @@
             </div>
 
         </div>
+        <ul id="sci">
+            <li><a href="#"><img src="" alt=""></a></li>
+            <li><a href="#"><img src="" alt=""></a></li>
+            <li><a href="#"><img src="" alt=""></a></li>
+
+        </ul>
     </section>
     
 </body>
