--- a/ex43/index.html
+++ b/ex43/index.html
@@ -14,11 +14,11 @@
             <a href="#" class="logo">Charropinho</a>
             <div class="toggle"></div>
         <ul class="navegation">
-                <li><a href="#" style="--i:1" class="active" >Menu</a></li>
-                <li><a href="#" style="--i:2" >Sobre</a></li>
-                <li><a href="#" style="--i:3" >Calendário</a></li>
-                <li><a href="#" style="--i:4" >Blog</a></li>
-                <li><a href="#" style="--i:5" >Contato</a></li>
+                <li><a href="#" style="--i:1;" class="active" >Menu</a></li>
+                <li><a href="#" style="--i:2;" >Sobre</a></li>
+                <li><a href="#" style="--i:3;" >Calendário</a></li>
+                <li><a href="#" style="--i:4;" >Blog</a></li>
+                <li><a href="#" style="--i:5;" >Contato</a></li>
                 
             </ul>
         </header>
@@ -32,9 +32,9 @@
         </div>
         
         <ul id="sci">
-            <li><a href="#"><img src="twitch.png" alt="twitch"></a></li>
-            <li><a href="#"><img src="twitter.png" alt="twitter"></a></li>
-            <li><a href="#"><img src="youtube.png" alt="youtube"></a></li>
+            <li><a href="#"style="--i:12;" ><img src="twitch.png" alt="twitch"></a></li>
+            <li><a href="#"style="--i:13;"><img src="twitter.png" alt="twitter"></a></li>
+            <li><a href="#"style="--i:14;"><img src="youtube.png" alt="youtube"></a></li>
 
         </ul>
     </section>
