--- a/ex43/index.html
+++ b/ex43/index.html
@@ -11,7 +11,7 @@
     <section>
         
         <header>
-            <a href="#" class="logo">Charropinho</a>
+            <a href="#" class="logo">Xaropinho</a>
             <div class="toggle"></div>
         <ul class="navegation">
                 <li><a href="#" style="--i:1;" class="active" >Menu</a></li>
@@ -24,7 +24,7 @@
         </header>
         <div id="content">
             <div id="textBox">
-                <h2>Feliz dia do Charropinho</h2>
+                <h2>Feliz dia do Xaropinho</h2>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore aliquam maiores dolore cupiditate. Molestias neque, id nemo cum natus dolorem qui laudantium ex eligendi beatae nihil! Veritatis, atque. Molestiae, sapiente!</p>
                 <a href="#">Ler mais</a>
             </div>
