--- a/ex41/01.html
+++ b/ex41/01.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Dev aprende</h1>
+    <h1>Festa VIP</h1>
+    <h2>Bem vindo a festa senhor?:</h2>
+    <input type="text"  id="d"  placeholder="Digite o seu nome">
+    <h2>Quem te convidou para essa  festa </h2>
+    <input type="text"  id="d1" placeholder="Quem te convidou?">
+    <input type="button" name="d2"  value="Verificar se posso entrar" id="b" onclick="botao()">
+           <h1>Você está permitido a  entrar?</h1>
+           <label for="" id="e">Pesquisando....</label>
+
+  
    
       
     <script src="01.js"></script>
