--- a/ex44/index.html
+++ b/ex44/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modo Dark</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Dark Mode</h1>
+        <div id="imgDark">
+            <p>Clique  na imagem acima para desativar o modo Dark</p>
+            <hr>
+            <h2>Objetivo  da Aula</h2>
+            <ul>
+                <li>Usar variáveis no Css</li>
+                <li>Amazenar dados com JavaScript</li>
+            </ul>
+            <button id="refresh">Atualizar Página</button>
+        </div>
+
+    </div>
+    <footer><a href="https://www.twitch.tv/tesdey">Tesdey</a></footer>
+    <script src="darkmode.js"></script>
 </body>
 </html>
