--- a/ex44/index.html
+++ b/ex44/index.html
@@ -7,10 +7,10 @@
     <title>Modo Dark</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
     <div class="container">
         <h1>Dark Mode</h1>
-        <div id="imgDark">
+        <div id="imgDark"> </div>
             <p>Clique  na imagem acima para desativar o modo Dark</p>
             <hr>
             <h2>Objetivo  da Aula</h2>
@@ -19,7 +19,7 @@
                 <li>Amazenar dados com JavaScript</li>
             </ul>
             <button id="refresh">Atualizar Página</button>
-        </div>
+       
 
     </div>
     <footer><a href="https://www.twitch.tv/tesdey">Tesdey</a></footer>
