--- a/ex47/index.html
+++ b/ex47/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <main>
-        <img src="" alt="pokémon" class="pokemon__image">
+        <img src="#" alt="pokemon" class="pokemon__image">
 
         <h1 class="pokemom__data">
-            <span class="pokemom__number">6</span>-
-            <span class="pokemom__name">charizard</span>
+            <span class="pokemom__number"></span>-
+            <span class="pokemon__name"></span>
         </h1>
-        <form action="" class="form">
+        <form action="#" class="form">
             <input type="search" class="input__search" placeholder="Name or Number" required>
         </form>
         <div class="buttons">
