--- a/ex49/index.html
+++ b/ex49/index.html
@@ -6,8 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Multiplas Paginas </title>
     <link rel="stylesheet" href="../ex49/css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@800&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
 </head>
 <body>
+    <nav>
+        <div class="container">
+            <a href="index.html"><img src="../ex49/imagem/logo01.png" alt=""></a>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#why-choose-us">Why-Choose-Us</a></li>
+                <li><a href="#faqs.html">FAQs</a></li>
+                <li><a href="#contact.html">Let`s Talk</a></li>
+            </ul>
+            <div class="icons">
+                <a href=""><i class="material-icons" >search</i></a>
+                <a href=""><i class="material-icons">shopping_basket</i></a>
+                <a href=""><i class="material-icons">person</i></a>
+        
+            </div>
+            <div>
+                <button id="menu-btn"><i class="material-icons">menu</i></button>
+                <button id="menu-btn"><i class="material-icons">clear</i></button>
+            </div>
+        </div>
+    </nav>
     <script src="../ex49/js/teste01"></script>
 </body>
 </html>
