--- a/ex49/index.html
+++ b/ex49/index.html
@@ -36,6 +36,19 @@
             </div>
         </div>
     </nav>
+    <header>
+        <div class="container">
+            <div class="info">
+                <div class="delivery">
+                    <small>Freee Delivery Worldwide</small>
+                    <i class="material-icons">local_shipping</i>
+                </div>
+                <h1>Foundation Matte E Poreless</h1>
+                <p>Maybelline</p>
+            </div>
+
+        </div>
+    </header>
     <script src="../ex49/js/teste01"></script>
 </body>
 </html>
