--- a/ex50/index.html
+++ b/ex50/index.html
@@ -9,8 +9,26 @@
 </head>
 <body>
     <div class="card">
-        <div class="circle"></div>
-        <div class="content"></div>
+        <div class="circle" style="--clr: #f17724;">
+            <img src="./sukitalogo.png" class="logo">
+        </div>
+        <div class="content">
+            <h2>Sukita</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi itaque repudiandae eum, atque ab beatae consectetur rem, tenetur, facilis deleniti delectus neque? </p>
+            <a href="#">Explorer</a>
+        </div>
+        <img src="./sukita.jpg" class="product-img">
+    </div>
+    <div class="card">
+        <div class="circle" style="--clr: rgb(2,27,53);">
+            <img src="./Pepsi-Logo.png" class="logo">
+        </div>
+        <div class="content">
+            <h2>Pespi</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi itaque repudiandae eum, atque ab beatae consectetur rem, tenetur, facilis deleniti delectus neque? </p>
+            <a href="#">Explorer</a>
+        </div>
+        <img src="./pespi.png" class="product-img" >
     </div>
     
 </body>
