--- a/ex50/index.html
+++ b/ex50/index.html
@@ -30,6 +30,18 @@
         </div>
         <img src="./pespi.png" class="product-img" >
     </div>
+    <div class="card">
+        <div class="circle" style="--clr:#E4bc21;">
+            <img src="./fanta-logo.png" class="logo">
+        </div>
+        <div class="content">
+            <h2>Pespi</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi itaque repudiandae eum, atque ab beatae consectetur rem, tenetur, facilis deleniti delectus neque? </p>
+            <a href="#">Explorer</a>
+        </div>
+        <img src="./fanta latino.jpg" class="product-img" >
+    </div>
+    
     
 </body>
 </html>
