--- a/ex50/index.html
+++ b/ex50/index.html
@@ -35,7 +35,7 @@
             <img src="./fanta-logo.png" class="logo">
         </div>
         <div class="content">
-            <h2>Pespi</h2>
+            <h2>Fanta</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi itaque repudiandae eum, atque ab beatae consectetur rem, tenetur, facilis deleniti delectus neque? </p>
             <a href="#">Explorer</a>
         </div>
