--- a/ex54/index.html
+++ b/ex54/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reviews</title>
+    <title>Starter</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <main>
         <section class="container">
             <div class="title">
-                <h2>our reviews</h2>
+                <h2>our Reviews</h2>
                 <div class="underline"></div>
             </div>
+            <article class="review">
+                <div class="img-container">
+                    <img src="./person1.png" id="">
+                </div>
+            </article>
         </section>
     </main>
     <script src="app.js"></script>
