--- a/ex54/index.html
+++ b/ex54/index.html
@@ -13,11 +13,24 @@
         <section class="container">
             <div class="title">
                 <h2>our Reviews</h2>
+                     <h3>.................</h3>
                 <div class="underline"></div>
             </div>
             <article class="review">
                 <div class="img-container">
-                    <img src="./person1.png" id="">
+                    <img src="./person1.png" id="person-img">
+                </div>
+                <h4 id="author">Capacete preto</h4>
+                <p id="job">ux Designer</p>
+                <p id="info" >
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur harum modi enim cumque accusantium. Voluptas quisquam, fugiat quas dolorum repellat ab repellendus dolore aspernatur mollitia. Tempora libero quidem maxime incidunt.
+                </p>
+                <div class="button-container">
+                    <button class="prev-btn">
+                        <i class="arrow left"> </i>
+                        <i class="arrow right"> </i>
+                    </button>
+                    <button class="random-btn">Me Surpreenda</button>
                 </div>
             </article>
         </section>
