--- a/ex54/index.html
+++ b/ex54/index.html
@@ -28,6 +28,10 @@
                 <div class="button-container">
                     <button class="prev-btn">
                         <i class="arrow left"> </i>
+                        
+                    </button>
+                    <button class="next-btn">
+                        
                         <i class="arrow right"> </i>
                     </button>
                     <button class="random-btn">Me Surpreenda</button>
