--- a/ex56/index.html
+++ b/ex56/index.html
@@ -22,11 +22,12 @@
         <div class="choose-theme">
             <div class="theme theme1" onclick="chooseTheme('#ffad00')"></div>
             <div class="theme theme2" onclick="chooseTheme('#01c5c4')"></div>
-            <div class="theme theme3" onclick="chooseTheme('#ffad00')"></div>
+            <div class="theme theme3" onclick="chooseTheme('#c45763')"></div>
             <div class="theme theme4" onclick="chooseTheme('#ffa5a5')"></div>
             <div class="theme theme5" onclick="chooseTheme('#d789d7')"></div>
             <div class="theme theme6" onclick="chooseTheme('#e7305b')"></div>
             <div class="theme theme7" onclick="chooseTheme('#303960')"></div>
+            
         </div>
     </div>
     <script src="ipp.js"></script>
