--- a/ex55/index.html
+++ b/ex55/index.html
@@ -10,7 +10,59 @@
 <body>
     <nav>
         <div class="nav-center">
+            <!--nav header-->
+            <div class="nav-header">
+                <img src="./imagem/Logo.png" class="logo" alt="">
+                <button class="nav-toggle">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+            <!--links-->
+            <ul class="links">
+                <li class="nav-item">
+                    <a href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#">About</a>
+                </li>
+                <li class="nav-item" >
+                    <a href="#">Project</a>
+                </li>
+                <li class="nav-item" >
+                    <a href="#">Contact</a>
+                </li>
+
+            </ul>
+            <!--social media-->
+            <ul class="social-icons">
+                <li ">
+                    <a href="https://pt-br.facebook.com/RatoBorrachudo">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitch.tv/gaules">
+                        <i class="fab fa-behance"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/mentecact0">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/c/GigaCheddar">
+                        <i class="fab fa-sketch"></i>
+                    </a>
+                </li>
+
+            </ul>
             
+        </div>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
     </nav>
 
