--- a/ex55/index.html
+++ b/ex55/index.html
@@ -12,7 +12,8 @@
         <div class="nav-center">
             <!--nav header-->
             <div class="nav-header">
-                <img src="./imagem/Logo.png" class="logo" alt="">
+                    <img src="./imagem/Logo.png" class="logo" alt="">
+                
                 <button class="nav-toggle">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -37,22 +38,22 @@
             <ul class="social-icons">
                 <li >
                     <a href="https://pt-br.facebook.com/RatoBorrachudo">
-                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-facebook" class="icon"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.twitch.tv/gaules">
-                        <i class="fab fa-behance"></i>
+                        <i class="fab fa-behance"><img src="./imagem/twitch.png" alt="" class="icon"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://twitter.com/mentecact0">
-                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-linkedin"><img src="./imagem/twitter.png" alt="" class="icon"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.youtube.com/c/GigaCheddar">
-                        <i class="fab fa-sketch"></i>
+                        <i class="fab fa-sketch"><img src="./imagem/youtube.png" alt="" class="icon"></i>
                     </a>
                 </li>
 
