--- a/ex52/mq003/index.html
+++ b/ex52/mq003/index.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-   <style>
-    /*Declarações gerais*/
-    /*Declarações de retrato*/
-    /*declarações de paisaagem*/
-   </style>
+    <link rel="stylesheet" href="style.css">
+
     
  
 </head>
