--- a/ex55/index.html
+++ b/ex55/index.html
@@ -9,17 +9,19 @@
 </head>
 <body>
    <header>
-    <nav>
+    <nav id="nav">
+      <button id="btn-menu"> Menu</button>
       <a href="#" id="logo">Logo</a>
+      <ul id="op">
+        <li><a href="#" >Home</a></li>
+        <li><a href="#">Projetos</a></li>
+        <li><a href="#">Contatos</a></li>
+        <li><a href="#">Mais</a></li>
+        <li><a href="#">Patrocinadores</a></li>
+      </ul>
 
     </nav>
-    <ul id="op">
-      <li><a href="#" class="base">Home</a></li>
-      <li><a href="#"class="base">Projetos</a></li>
-      <li><a href="#"class="base">Contatos</a></li>
-      <li><a href="#"class="base">Mais</a></li>
-      <li><a href="#"class="base">Patrocinadores</a></li>
-    </ul>
+   
    </header>
 
 
