--- a/ex55/index.html
+++ b/ex55/index.html
@@ -8,19 +8,17 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
+   <header id="header">
+    <a href=""id="logo">Logo</a>
     <nav id="nav">
-      <button id="btn-menu"> Menu</button>
-      <a href="#" id="logo">Logo</a>
-      <ul id="op">
-        <li><a href="#" >Home</a></li>
-        <li><a href="#">Projetos</a></li>
-        <li><a href="#">Contatos</a></li>
-        <li><a href="#">Mais</a></li>
-        <li><a href="#">Patrocinadores</a></li>
+      <button id="btn-mobile">Menu</button>
+      <ul id="menu">
+        <li><a href="#" class="Home">Home</a></li>
+        <li><a href="#" class="Home">Contact</a></li>
+        <li><a href="#" class="Home">About</a></li>
       </ul>
-
     </nav>
+   
    
    </header>
 
