--- a/ex55/index.html
+++ b/ex55/index.html
@@ -11,11 +11,15 @@
    <header id="header">
     <a href=""id="logo">Logo</a>
     <nav id="nav">
-      <button id="btn-mobile">Menu</button>
+      <button id="btn-mobile">
+        Menu <span id="hambugue"></span></button>
       <ul id="menu">
         <li><a href="#" class="Home">Home</a></li>
         <li><a href="#" class="Home">Contact</a></li>
         <li><a href="#" class="Home">About</a></li>
+        <li><a href="#" class="Home">Rapaz</a></li>
+        <li><a href="#" class="Home">Uepa</a></li>
+        <li><a href="#" class="Home">Que isso</a></li>
       </ul>
     </nav>
    
