--- a/ex55/index.html
+++ b/ex55/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <header id="menu-bar">
-    <menu id="menu" onclick="onClickMenu()">
+    <menu id="menu" >
+      <div class="menu-bg" id="menu-bg"></div>
       <span id="bar1" class="bar"></span>
       <span id="bar2" class="bar"></span>
       <span id="bar3" class="bar"></span>
@@ -23,7 +24,7 @@
       <li><a href="#">Contacto</a></li>
     </ul>
   </header>
-  <div class="menu-bg" id="menu-bg"></div>
+  
     <script src="app.js"></script>
 </body>
 </html>
