--- a/ex55/index.html
+++ b/ex55/index.html
@@ -8,26 +8,24 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header id="menu-bar">
-    <menu id="menu" >
+  <div class="wrapper">
+    <div class="container">
+      <div class="menulogo" ></div>
+      <div class="menulogo"></div>
+      <div class="menulogo"></div>
       
-      <span id="bar1" class="bar"></span>
-      <span id="bar2" class="bar"></span>
-      <span id="bar3" class="bar"></span>
-     
 
-    </menu>
-    <ul class="nav" id="nav">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Sobre</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Galeria</a></li>
-      <li><a href="#">Contacto</a></li>
-      <div class="menu-bg" id="menu-bg"></div>
-    </ul>
+    </div>
+
+  </div>
+  <ul class="menu">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Contact</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Downloads</a></li>
+    <li><a href="#">Developers</a></li>
+  </ul>
  
-  </header>
-  
     <script src="app.js"></script>
 </body>
 </html>
