--- a/ex55/index.html
+++ b/ex55/index.html
@@ -8,6 +8,26 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <main >
+
+            <a href="" class="logo">Logo</a>
+           
+            <ul class="menu" >
+                <li><a href=""id="home">Home</a></li>
+                <li><a href="">Page</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Links</a></li>
+                <li><a href="">Email</a></li>
+            </ul>
+            <div class="hamburgue">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </main>
+
+    </header>
     
   
 
