--- a/ex55/index.html
+++ b/ex55/index.html
@@ -8,6 +8,20 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="hed">
+        <a href="" class="logo">Logo</a>
+        <nav class="nav">
+            <ul class="menu">
+                <li><a href="" class="me1">Home</a></li>
+                <li><a href="" class="me">Contact</a></li>
+                <li><a href="" class="me">About</a></li>
+                <li><a href="" class="me">Links</a></li>
+                <li><a href="" class="me">Plus</a></li>
+            </ul>
+        </nav>
+        <button class="btn-menu"><span class="hamb"></span></button>
+       
+    </header>
 
     
   
