--- a/ex52/mq004/index.html
+++ b/ex52/mq004/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile First</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./estilos/estilo.css">
-
+    <link rel="stylesheet" href="./estilos/estilo.css" media="all">
+    <link rel="stylesheet" href="/estilos/Media-query.css">
     
  
 </head>
 <body>
+    <h1>Testando Media Query</h1>
+    <img src="./imagens/icon-phone.png" alt="Acessando via SmartPhone">
+    <img src="imagens/icon-tablet.png" alt="tablet">
+    <img src="imagens/icon-print.png" alt="impressora">
+    <img src="imagens/icon-pc.png" alt="Versão para Desktop">
+    <img src="imagens/icon-tv.png" alt="">
     
 </body>
 </html>
