--- a/ex52/mq004/index.html
+++ b/ex52/mq004/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile First</title>
     <link rel="stylesheet" href="./estilos/estilo.css" media="all">
-    <link rel="stylesheet" href="./estilos/Media-query.css" media=" screen and (min-width:800px) ">
+    <link rel="stylesheet" href="./estilos/Media-query.css">
     
  
 </head>
