--- a/ex55/index.html
+++ b/ex55/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+    
 
     <!-- styles -->
     <link rel="stylesheet" href="./style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+  />
   </head>
   <body>
     <nav>
@@ -17,7 +21,7 @@
         <div class="nav-header">
           <a href="" class="logo">Logo</a>
           <button class="nav-toggle">
-            <i class="fas fa-bars"></i>
+            <span class="menu"></span>
           </button>
         </div>
         <!-- links -->
