--- a/ex60/index.html
+++ b/ex60/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modal</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./fontawesome-free-5.12.0-web/css/all.min.css">
+   >
 </head>
 <body>
     <header class="hero">
@@ -17,6 +17,15 @@
             </button>
         </div>
     </header>
+    <div class="modal-overlay">
+        <div class="modal-container">
+            <h3>Modal Content</h3>
+            <button class="close-btn">
+                <span class="fas"></span>
+            </button>
+        </div>
+    </div>
+    <script src="./model.js"></script>
 
     
 </body>
