--- a/ex52/mq005/index.html
+++ b/ex52/mq005/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <button class="btn-menu">
-            <span class="btn-f"></span>
-        </button>
+        <div class="cab">
+            <button class="btn-menu">
+                <span class="btn-f"></span>
+            </button>
+        </div>
         <h1>Meu site</h1>
         <menu class="menu">
             <ul class="ul">
@@ -37,6 +39,7 @@
         </article>
        
     </main>
+    <script src="./app.js"></script>
     
 </body>
 </html>
