--- a/ex64/index.html
+++ b/ex64/index.html
@@ -22,13 +22,14 @@
                 <img src="./imagens/menu-item.jpeg"  class="photo" alt="menu item">
                 <div class="item-info">
                     <header>
-                        <h4>Buttermilk pancakes</h4>
+                        <h4>buttermilk pancakes</h4>
                         <h4 class="price">$15</h4>
-
-                    </header>
-                    <p class="item-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tempora in blanditiis animi, sed explicabo aliquam illo ea autem inventore aspernatur ex voluptate suscipit voluptates quo tempore nobis numquam sunt.
-                    </p>
+                      </header>
+                      <p class="item-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
+                        laboriosam excepturi! Quo, officia.
+                      </p>
                  
                 </div>
 
@@ -36,5 +37,6 @@
              <!-- fim do item unico-->
          </div>
     </section>
+    <script src="./app.js"></script>
 </body>
 </html>
