--- a/ex64/index.html
+++ b/ex64/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/Media.css">
 </head>
 <body>
     <section class="menu">
@@ -15,11 +16,17 @@
             <div class="underline"></div>
          </div>
          <!--botões de filtro-->
+         <div class="  btn-container">
+            <button type="button" class="filter-btn" data-id="all">all</button>
+            <button type="button" class="filter-btn" data-id="breakfast">breakfast</button>
+            <button type="button" class="filter-btn" data-id="lunch">lunch</button>
+            <button type="button" class="filter-btn" data-id="shakes">shakes</button>
+         </div>
          <!--itens do menu-->
          <div class="section-center">
             <!--item unico-->
             <article class="menu-item">
-                <img src="./imagens/menu-item.jpeg"  class="photo" alt="menu item">
+                <br><img src="./imagens/menu-item.jpeg"  class="photo" alt="menu item">
                 <div class="item-info">
                     <header>
                         <h4>buttermilk pancakes</h4>
