--- a/ex64/index.html
+++ b/ex64/index.html
@@ -17,15 +17,16 @@
          </div>
          <!--botões de filtro-->
          <div class="  btn-container">
-            <button type="button" class="filter-btn" data-id="all">all</button>
+            <!--<button type="button" class="filter-btn" data-id="all">all</button>
             <button type="button" class="filter-btn" data-id="breakfast">breakfast</button>
             <button type="button" class="filter-btn" data-id="lunch">lunch</button>
             <button type="button" class="filter-btn" data-id="shakes">shakes</button>
+            <button type="button" class="filter-btn" data-id="dinner">Dinner</button>-->
          </div>
          <!--itens do menu-->
          <div class="section-center">
             <!--item unico-->
-            <article class="menu-item">
+            <!--<article class="menu-item">
                 <br><img src="./imagens/menu-item.jpeg"  class="photo" alt="menu item">
                 <div class="item-info">
                     <header>
@@ -40,7 +41,7 @@
                  
                 </div>
 
-            </article>
+            </article>-->
              <!-- fim do item unico-->
          </div>
     </section>
