--- a/ex66/index.html
+++ b/ex66/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--cabeçalho-->
     <header>
-        <video  class="vvideo-container" controls muted autoplay loop >
+        <video  class="video-container" controls muted autoplay loop >
             <source src="./video.mp4" type="video/mp4">
         </video>
        
