--- a/ex66/index.html
+++ b/ex66/index.html
@@ -18,8 +18,12 @@
      
     </header>
     <h1>Video Project</h1> 
-    
-
+    <!--video switch-->
+    <button class="shitch-btn">
+        <span>Play</span>
+        <span>Pause</span>
+        <span class="switch"></span>
+    </button>
 
     <script src="./app.js"></script>
 </body>
