--- a/ex67/index.html
+++ b/ex67/index.html
@@ -6,8 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scroll Project</title>
     <link rel="stylesheet" href="./css/estilo.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+  />
 </head>
 <body>
+    <header id="home">
+        <nav id="nav">
+            <div class="nav-center">
+                <!--nav header-->
+                <div class="nav-header">
+                    <img src="" alt="cidade" class="logo">
+                    <button class="nav-toggle">
+                       <i class="fas fa-bars"></i>
+                    </button>
+                </div>
+                <div class="links-container">
+                    <ul class="links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Tours</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!--sobre-->
+        <section id="about" class="section">
+            <div class="title">
+                <h2>About<span>us</span></h2>
+            </div>
+        </section>
+        <!--serviços-->
+        <section id="services" class="section">
+            <div class="title">
+                <h2>our <span>services</span></h2>
+            </div>
+        </section>
+        <!--Contato-->
+        <section id="tours" class="section">
+            <div class="title">
+                <h2>featured<span>tours</span></h2>
+            </div>
+        </section>
+        <!--rodapé-->
+        <footer class="section">
+            <p>copyright &copy; backroads travel tours company
+                <span id="date"></span>.all rights reserved
+            </p>
+        </footer>
+        <a href="" class="scroll-link top-link">
+            <i class="fas fa-arrow-up"></i>
+
+        </a>
+       
+        
+    </header>
     <script src="./js/app.js"></script>
 </body>
 </html>
