--- a/ex67/index.html
+++ b/ex67/index.html
@@ -17,7 +17,7 @@
             <div class="nav-center">
                 <!--nav header-->
                 <div class="nav-header">
-                    <img src="" alt="cidade" class="logo">
+                    <h1 id="sr">Srsorataro</h1>
                     <button class="nav-toggle">
                        <i class="fas fa-bars"></i>
                     </button>
@@ -35,7 +35,7 @@
         <!--sobre-->
         <section id="about" class="section">
             <div class="title">
-                <h2>About<span>us</span></h2>
+                <h2>About<span> us</span></h2>
             </div>
         </section>
         <!--serviços-->
@@ -47,8 +47,8 @@
         <!--Contato-->
         <section id="tours" class="section">
             <div class="title">
-                <h2>featured<span>tours</span></h2>
-            </div>
+                <h2>featured<span> tours</span></h2>
+            </div> 
         </section>
         <!--rodapé-->
         <footer class="section">
