--- a/ex67/index.html
+++ b/ex67/index.html
@@ -19,7 +19,7 @@
                 <div class="nav-header">
                     <h1 id="sr">Srsorataro</h1>
                     <button class="nav-toggle">
-                       <i class="fas fa-bars"></i>
+                       <span></span>
                     </button>
                 </div>
                 <div class="links-container">
@@ -33,36 +33,48 @@
             </div>
         </nav>
         <!--sobre-->
-        <section id="about" class="section">
-            <div class="title">
-                <h2>About<span> us</span></h2>
+        <div class="banner">
+            <div class="container">
+              <h1>scroll project</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas eos
+                neque sunt in? Id, necessitatibus quos quisquam distinctio
+                laudantium fugiat?
+              </p>
+              <a href="#tours" class="scroll-link btn btn-white">explore tours</a>
             </div>
-        </section>
-        <!--serviços-->
-        <section id="services" class="section">
-            <div class="title">
-                <h2>our <span>services</span></h2>
-            </div>
-        </section>
-        <!--Contato-->
-        <section id="tours" class="section">
-            <div class="title">
-                <h2>featured<span> tours</span></h2>
-            </div> 
-        </section>
-        <!--rodapé-->
-        <footer class="section">
-            <p>copyright &copy; backroads travel tours company
-                <span id="date"></span>.all rights reserved
-            </p>
-        </footer>
-        <a href="" class="scroll-link top-link">
-            <i class="fas fa-arrow-up"></i>
-
-        </a>
+          </div>
+  
        
         
     </header>
+    <section id="about" class="section">
+        <div class="title">
+            <h2>About<span> us</span></h2>
+        </div>
+    </section>
+    <!--serviços-->
+    <section id="services" class="section">
+        <div class="title">
+            <h2>our <span>services</span></h2>
+        </div>
+    </section>
+    <!--Contato-->
+    <section id="tours" class="section">
+        <div class="title">
+            <h2>featured<span> tours</span></h2>
+        </div> 
+    </section>
+    <!--rodapé-->
+    <footer class="section">
+        <p>copyright &copy; backroads travel tours company
+            <span id="date"></span>.all rights reserved
+        </p>
+    </footer>
+    <a href="" class="scroll-link top-link">
+        <i class="fas fa-arrow-up"></i>
+
+    </a>
     <script src="./js/app.js"></script>
 </body>
 </html>
