--- a/ex67/index.html
+++ b/ex67/index.html
@@ -19,7 +19,7 @@
                 <div class="nav-header">
                     <h1 id="sr">Srsorataro</h1>
                     <button class="nav-toggle">
-                       <span></span>
+                       <span class="menu"></span>
                     </button>
                 </div>
                 <div class="links-container">
@@ -68,11 +68,11 @@
     <!--rodapé-->
     <footer class="section">
         <p>copyright &copy; backroads travel tours company
-            <span id="date"></span>.all rights reserved
+            <span id="date"></span>.all rights reserved.
         </p>
     </footer>
-    <a href="" class="scroll-link top-link">
-        <i class="fas fa-arrow-up"></i>
+    <!--<a href="" class="scroll-link top-link">
+        <i class="fas fa-arrow-up"></i>-->
 
     </a>
     <script src="./js/app.js"></script>
