--- a/ex67/index.html
+++ b/ex67/index.html
@@ -72,9 +72,9 @@
         </p>
     </footer>
     <!--<a href="" class="scroll-link top-link">
-        <i class="fas fa-arrow-up"></i>-->
+        <i class="fas fa-arrow-up"></i>
 
-    </a>
+    </a>-->
     <script src="./js/app.js"></script>
 </body>
 </html>
