--- a/ex67/index.html
+++ b/ex67/index.html
@@ -71,10 +71,10 @@
             <span id="date"></span>.all rights reserved.
         </p>
     </footer>
-    <!--<a href="" class="scroll-link top-link">
+    <a href="" class="scroll-link top-link">
         <i class="fas fa-arrow-up"></i>
 
-    </a>-->
+    </a>
     <script src="./js/app.js"></script>
 </body>
 </html>
