--- a/ex67/index.html
+++ b/ex67/index.html
@@ -24,10 +24,10 @@
                 </div>
                 <div class="links-container">
                     <ul class="links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Tours</a></li>
+                        <li><a href="#Home" class="scroll-link" id="c1">Home</a></li>
+                        <li><a href="#about" class="scroll-link" id="c2">about</a></li>
+                        <li><a href="#Services" class="scroll-link" id="c3">Services</a></li>
+                        <li><a href="#Tours" class="scroll-link" id="c4">Tours</a></li>
                     </ul>
                 </div>
             </div>
@@ -71,7 +71,7 @@
             <span id="date"></span>.all rights reserved.
         </p>
     </footer>
-    <a href="" class="scroll-link top-link">
+    <a href="#home" class="scroll-link top-link">
         <i class="fas fa-arrow-up"></i>
 
     </a>
